--- a/05_Mineria_De_Datos/ProyectoFinal/ProyectoFinal_v2.Rmd
+++ b/05_Mineria_De_Datos/ProyectoFinal/ProyectoFinal_v2.Rmd
@@ -410,11 +410,8 @@ Para las cantidades se puede observar que son muchos mas, `r Quantity_Negativos`
 
 ## Selección de datos: 
 Debe describir y justificar con cuáles atributos trabajará o bien cuáles serán descartados, de igual forma, si se realiza una selección por filas, debe estar documentada y justificada.
-TODO
-Para efectos de este trabajo solo se utilizaran datos del pais "Germany"
 
 ```{r warning=FALSE}
-#datos_ge <- retail[retail$Country == 'Germany',]
 datos_ge <- retail
 summary(datos_ge)
 ```
@@ -541,7 +538,7 @@ kable(head(historic_invoices,10),"html", booktabs = T)%>%
 
 Guardamos una tabla con los clientes y su pais para utilizarla mas adelante.
 
-```{r warning=FALSe,cache=TRUE}
+```{r warning=FALSE,cache=TRUE}
 clientes_pais <- datos_ge %>% 
   distinct(CustomerID, Country) %>%
   distinct(CustomerID, .keep_all = TRUE)
@@ -695,7 +692,7 @@ Para la selecion del numero optimo de clusters a crear, utilizamos 3 técnicas:
 
 A continuación se muestran los resultados de estas técnicas:
 
-```{r warning=FALSE}
+```{r warning=FALSE,cache=TRUE}
 rfm_clustering<-rfm_result$rfm[,c("recency_days","transaction_count","amount")]
 rfm_clustering <- na.omit(rfm_clustering)
 
@@ -715,12 +712,11 @@ fviz_nbclust(rfm_clustering,pam,method = 'silhouette',k.max = 10)
 fviz_nbclust(rfm_clustering,pam,method = 'wss',k.max = 10)
 
 # cálculo del valor óptimo de k usando la estadística gap
-fviz_nbclust(rfm_clustering,pam,method = 'gap_stat',k.max = 10)
+#fviz_nbclust(rfm_clustering,pam,method = 'gap_stat',k.max = 10)
 
 ```
 
-Como se muestra en los graficos anteriores, tanto el método de Silhoutte como el del Codo indican que el numero de clusters optimo es 3. El método de estadística de gap indica que este número sería 1. Para la creación de los clusters, vamos a utilizar 3, dado que no tiene sentido para los objetivos utilizar solo 1. Esta decisión se refuerza con el hecho que dos de los tres métodos retornan este valor.
-TODO - GAP falla y el codo puede darnos 6 tambien.
+Como se muestra en los graficos anteriores, el método de Silhouttey el método del codo, parecen mostrar 2 cortes para identificar la cantidad de clusteres óptimos con los valores de 3 y 6. Considerando que el requerimiento del negocio es agrupar a los clientes en 3 segmentos se utiliza este valor para k, para la creación del número de clusters.
 
 
 ```{r warning=FALSE}
@@ -738,15 +734,13 @@ kable(medoids_df,"html", booktabs = T)%>%
 medoids_df
 ```
 
-TODO: Arreglarlo
-
 Como podemos observar en los medoides, los clientes corresponden a grandes rasgos a los siguientes 3 clusters:
 
-* Clientes de bajo valor: Corresponden a los clientes del cluster 1, que tienen pocas compras, de un monto bajo, y no compran recientemente.
+* Clientes de bajo valor: Corresponden a los clientes del cluster 3, que tienen pocas compras, de un monto bajo, y no compran recientemente.
 
-* Clientes de valor medio: Corresponden a los clientes del cluster 3, que tienen una cantidad media de compras, compran recientemente, y montos de compras medios
+* Clientes de valor medio: Corresponden a los clientes del cluster 2, que tienen una cantidad media de compras, compran recientemente, y montos de compras medios
 
-* Clientes de alto valor: Corresponden a los clientes del cluster 2, que tienen una cantidad alta de compras, recientes, y de montos más altos
+* Clientes de alto valor: Corresponden a los clientes del cluster 1, que tienen una cantidad alta de compras, recientes, y de montos más altos
 
 Podemos observar la visualizacion de los clusters en el siguiente grafico:
 
@@ -792,12 +786,12 @@ centroides$clusters.size<-NULL
 centroides$cluster<-rownames(centroides)
 centroides
 ```
-TODO: Ajustarlos
+
 Como podemos observar en los clusters, los clientes corresponden a grandes rasgos a los siguientes 3 clusters:
 
-* Clientes de bajo valor: Corresponden a los clientes del cluster 1, que tienen pocas compras, de un monto bajo, y no compran recientemente.
+* Clientes de bajo valor: Corresponden a los clientes del cluster 2, que tienen pocas compras, de un monto bajo, y no compran recientemente.
 
-* Clientes de valor medio: Corresponden a los clientes del cluster 2, que tienen una cantidad media de compras, compran recientemente, y montos de compras medios
+* Clientes de valor medio: Corresponden a los clientes del cluster 1, que tienen una cantidad media de compras, compran recientemente, y montos de compras medios
 
 * Clientes de alto valor: Corresponden a los clientes del cluster 3, que tienen una cantidad alta de compras, no son compras tan recientes, pero de montos más altos
 
@@ -824,9 +818,8 @@ ggplot(rfm_clustering,aes(rfm_clustering$recency_days,rfm_clustering$transaction
 
 ```
 
-TODO: revisar grafico (clusters)
+El siguiente gráfico muestra el detalle de los clusters creados.
 
-El siguiente gráfico muestra con mayor claridad el agrupamiento del cluster número 2, el cual parece agrupar a las compañias que se han mantenido por mayor tiempo en el mercado y tienen ingresos elevados.
 ```{r warning=FALSE}
 # otra forma de visualizar los clusters
 fviz_cluster(clusters,data=rfm_clustering,palette='jco',ggtheme = theme_minimal())
@@ -855,24 +848,24 @@ summary(export_df)
 
 
 export_df<-export_df %>% 
-  mutate(kmeans = replace(kmeans, kmeans == 2, "2 Medio Valor")) %>%
+  mutate(kmeans = replace(kmeans, kmeans == 1, "2 Medio Valor")) %>%
   mutate(kmeans = replace(kmeans, kmeans == 3, "1 Alto Valor")) %>%
-  mutate(kmeans = replace(kmeans, kmeans == 1, "3 Bajo Valor")) %>%
-  mutate(kmedoids = replace(kmedoids, kmedoids == 3, "2 Medio Valor")) %>%
-  mutate(kmedoids = replace(kmedoids, kmedoids == 2, "1 Alto Valor")) %>%
-  mutate(kmedoids = replace(kmedoids, kmedoids == 1, "3 Bajo Valor"))
+  mutate(kmeans = replace(kmeans, kmeans == 2, "3 Bajo Valor")) %>%
+  mutate(kmedoids = replace(kmedoids, kmedoids == 2, "2 Medio Valor")) %>%
+  mutate(kmedoids = replace(kmedoids, kmedoids == 1, "1 Alto Valor")) %>%
+  mutate(kmedoids = replace(kmedoids, kmedoids == 3, "3 Bajo Valor"))
 
 write.csv(export_df,"resultado_cluster.csv")
 
 centroides2<-centroides %>% 
-  mutate(cluster = replace(cluster, cluster == "2", "2 Medio Valor")) %>%
+  mutate(cluster = replace(cluster, cluster == "1", "2 Medio Valor")) %>%
   mutate(cluster = replace(cluster, cluster == "3", "1 Alto Valor")) %>%
-  mutate(cluster = replace(cluster, cluster == "1", "3 Bajo Valor"))
+  mutate(cluster = replace(cluster, cluster == "2", "3 Bajo Valor"))
 
 medoids_df2 <- medoids_df %>%
-  mutate(cluster = replace(cluster, cluster == "3", "2 Medio Valor")) %>%
-  mutate(cluster = replace(cluster, cluster == "2", "1 Alto Valor")) %>%
-  mutate(cluster = replace(cluster, cluster == "1", "3 Bajo Valor"))
+  mutate(cluster = replace(cluster, cluster == "2", "2 Medio Valor")) %>%
+  mutate(cluster = replace(cluster, cluster == "1", "1 Alto Valor")) %>%
+  mutate(cluster = replace(cluster, cluster == "3", "3 Bajo Valor"))
 
 export_clusters <- rbind(medoids_df2,centroides2)
 
@@ -1093,6 +1086,8 @@ Se procede a exportar los datos a un archivo csv para la creación de los dashbo
 
 
 ```{r}
+#entrenamiento$Observacion <- 'entrenamiento'
+#prueba$Observacion <- 'prueba'
 resultados_rm <- rbind(entrenamiento,prueba)
 resultados_rm$Modelo <- 'Regresión Multiple'
 
